<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/distance"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_distace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_distance"
        android:layout_centerHorizontal="true"
        android:text="@string/total_km" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/text_distace"
        android:layout_marginTop="12dp"
        android:hint="@string/price"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_price_liter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_price"
        android:layout_centerHorizontal="true"
        android:text="@string/price_liter" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/text_price_liter"
        android:layout_marginTop="12dp"
        android:hint="@string/autonomy"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_kms_per_liter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_autonomy"
        android:layout_centerHorizontal="true"
        android:text="@string/kms_per_liter" />

    <TextView
        android:id="@+id/text_total_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_kms_per_liter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/total_expense"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_total_expense"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/value_total"
        android:textColor="@color/purple_700"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_total_value"
        android:layout_marginTop="16dp"
        android:text="@string/caculate"
        android:backgroundTint="@color/teal_200" />

    <TextView
        android:id="@+id/text_autonomy_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_calculate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/autonomy_title"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edit_liters"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/text_autonomy_title"
        android:layout_marginTop="12dp"
        android:hint="@string/qtd_liters"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edit_km"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/edit_liters"
        android:layout_marginTop="12dp"
        android:hint="@string/traveled_km"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_result_autonomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_km"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/division"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/button_autonomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_result_autonomy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/autonomy" />

    <ImageView
        android:id="@+id/image_car"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/button_autonomy"
        android:src="@drawable/car_red"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true" />

</RelativeLayout>